syntax = "proto2";

package pb;

message RPC {
    repeated SubOpts subscriptions = 1;

    message SubOpts {
        optional bool subscribe = 1; // subscribe or unsubcribe
        optional string topicid = 2;
    }

    repeated TopicRpc rpcs = 2;
}

message TopicRpc {
    optional string topicid = 1;

    // Router-specific types
    optional RlncRpc rlnc = 2;
    optional FloodsubRpc floodsub = 3;
}

message RlncRpc {
    repeated Chunk chunks = 1;

    message Chunk {
        optional string messageID = 1;
        optional bytes data = 2;
        repeated bytes coefficients = 3;
        optional bytes extra = 4;
    }
}

message FloodsubRpc {
    repeated bytes messages = 1;
}
